--- a/Home.html
+++ b/Home.html
@@ -37,10 +37,19 @@
 <!-------- Course ---------->
 <section class="course">
     <h1>WHAT WE OFFER</h1>
-    <p>5DHIT MREWEL NARUTO</p>
+    <p></p>
     <div class="row">
         <div class="course-col">
             <h3>intermediate</h3>
+            <p>Developed By Anis Sellami.</p>
+        </div>
+        <div class="course-col">
+            <h3> </h3>
+            <p>Developed By Anis Sellami.</p>
+        </div>
+        <div class="course-col">
+            <h3>intermediate</h3>
+            <p>Developed By Anis Sellami.</p>
         </div>
     </div>
 
